src/objects/Financial_Report__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Reports</relationshipLabel>
        <relationshipName>Financial_Reports</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>As_Of_Date__c</fullName>
        <label>As Of Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CAC__c</fullName>
        <label>CAC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CMRR__c</fullName>
        <label>CMRR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cash_Balance__c</fullName>
        <label>Cash Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MRR__c</fullName>
        <label>MRR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Burn__c</fullName>
        <label>Monthly Burn</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Profit_Loss_YTD__c</fullName>
        <label>Profit / Loss (YTD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Revenue_YTD__c</fullName>
        <label>Revenue (YTD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YTD_Bookings_ACV__c</fullName>
        <label>YTD Bookings (ACV)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Financial Report</label>
    <nameField>
        <displayFormat>FR-{00000000}</displayFormat>
        <label>Financial Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>